--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     runtime: node
     region: oregon # or your preferred region
     plan: free # Use 'starter' for production
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build
     startCommand: npm run start:prod
     healthCheckPath: /api/v1
     envVars:
