--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gigmatch",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Akashdeep Singh <akashdalla406@gmail.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -35,6 +35,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cloudinary": "^2.8.0",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.6.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.3",
     "stripe": "^20.1.0"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
