--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.14.3",
     "cloudinary": "^2.8.0",
     "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.3",
     "jwks-rsa": "^3.2.1",
     "mongoose": "^9.1.1",
     "mongoose-geojson-schema": "^3.1.1",
