--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,11 @@ lerna-debug.log*
 .env.production.local
 .env.local
 
+# Firebase service account (NEVER commit this!)
+firebase-service-account.json
+*-service-account.json
+serviceAccountKey.json
+
 # temp directory
 .temp
 .tmp
@@ -56,3 +61,9 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Firebase / Google Cloud secrets
+firebase-service-account.json
+*.service-account.json
+*.key.json
+
